Move Poll action under auth Added tests for poll
